tests/sksl/errors/LayoutRepeatedQualifiers.glsl
### Compilation failed:

error: 14: layout qualifier 'origin_upper_left' appears more than once
error: 15: layout qualifier 'push_constant' appears more than once
error: 16: layout qualifier 'blend_support_all_equations' appears more than once
error: 17: layout qualifier 'srgb_unpremul' appears more than once
error: 18: layout qualifier 'location' appears more than once
error: 19: layout qualifier 'offset' appears more than once
error: 20: layout qualifier 'binding' appears more than once
error: 21: layout qualifier 'index' appears more than once
error: 22: layout qualifier 'set' appears more than once
error: 23: layout qualifier 'builtin' appears more than once
error: 24: layout qualifier 'input_attachment_index' appears more than once
error: 25: 'srgb_unpremul' is only permitted in runtime effects
error: 25: 'srgb_unpremul' is only permitted on 'uniform' variables
error: 25: 'srgb_unpremul' is only permitted on half3, half4, float3, or float4 variables
14 errors
